--- a/11.ResourceGroup.md
+++ b/11.ResourceGroup.md
@@ -14,8 +14,12 @@ Cgroup Ver 2. 설정.
 sudo -iu root
 ```
 
+관련 RPM 설치
+```
 dnf install libcgroup-tools libcgroup
+```
 
+whpg cgroup 서비스 등록
 vi /etc/systemd/system/gpdb.servive
 ```
 [Unit]
@@ -43,24 +47,35 @@ ExecStartPost=bash -ec "echo $MAINPID > ./helper.scope/cgroup.procs;"
 WantedBy=basic.target
 ```
 
+whpg cgroup 서비스 시작/확인.
+```
 systemctl daemon-reload
 systemctl enable gpdb.service
 systemctl start gpdb.service
 systemctl status gpdb.service
+```
 
+whpg cgroup 추가 설정 1
+```
 mkdir -p /sys/fs/cgroup/gpdb
 chown -R gpadmin:gpadmin /sys/fs/cgroup/gpdb
 chown -R gpadmin:gpadmin /sys/fs/cgroup/gpdb.service
 chmod a+w /sys/fs/cgroup/cgroup.procs 
 echo "+cpuset +io +cpu +memory" | tee -a /sys/fs/cgroup/gpdb.service/cgroup.subtree_control
 echo "+cpuset +io +cpu +memory" | tee -a /sys/fs/cgroup/gpdb/cgroup.subtree_control
-
+```
+whpg cgroup 추가 설정 2
+```
 grubby --update-kernel=/boot/vmlinuz-$(uname -r) --args="systemd.unified_cgroup_hierarchy=1"
 grubby --update-kernel=/boot/vmlinuz-$(uname -r) --remove-args="systemd.legacy_systemd_cgroup_controller"
 grubby --update-kernel=/boot/vmlinuz-$(uname -r) --args="psi=1" 
 #(옵션) reboot 
+```
 
+whpg cgroup 서비스 확인.
+```
 sudo systemctl status gpdb.service
+```
 
 ### 테스트 시나리오
 대시보드 조회를 위한 사용자 그룹(dashboard_users)과 데이터 로딩을 위한 ETL 그룹(etl_users)을 나누어 리소스를 할당하는 예시입니다.
@@ -69,10 +84,11 @@ sudo systemctl status gpdb.service
 
 ## 마스트 노드에서 gpadmin 계정으로 작업.
 
+```
 gpconfig -c gp_resource_manager -v "group-v2"
 gpstop -r
 gpconfig -s gp_resource_manager 
-
+```
 
 1단계: 리소스 그룹 생성 (CREATE RESOURCE GROUP)
 먼저, 각 그룹의 리소스 제한을 정의하여 생성합니다.
@@ -100,7 +116,9 @@ CREATE RESOURCE GROUP etl_users_rg WITH (
 참고: MEMORY_SHARED_QUOTA 옵션을 사용하여 그룹 내 쿼리들이 공유할 메모리 비율을 정할 수도 있습니다.
 
 -- 설정 확인.
+```
 SELECT * FROM gp_toolkit.gp_resgroup_config;
+```
 
 2단계: 역할(Role) 생성 및 리소스 그룹 할당
 이제 이 리소스 그룹에 속할 사용자(Role)를 만들고, 해당 리소스 그룹을 할당합니다.
