--- a/11.ResourceGroup.md
+++ b/11.ResourceGroup.md
@@ -5,11 +5,11 @@ https://warehouse-pg.io/docs/7x/admin_guide/workload_mgmt_resgroups.html#using-r
 리소스 그룹은 **워크로드 관리(Workload Management)**를 위한 Greenplum의 핵심 기능입니다. 
 특정 사용자 그룹(Role)이 사용할 수 있는 CPU, 메모리, 동시성(동시 실행 쿼리 수)을 제한하여, 중요한 작업이 리소스를 안정적으로 확보하고 시스템 전체의 과부하를 방지하는 역할을 합니다.
 
-### Redhat(Rocky) OS 사전 구성.
+## 1.Redhat(Rocky) OS 사전 구성.
 
 Cgroup Ver 2. 설정.
 
-## 모든 노드에서 root 계정으로 작업.
+### 모든 노드에서 root 계정으로 작업.
 ```
 sudo -iu root
 ```
@@ -77,12 +77,12 @@ whpg cgroup 서비스 확인.
 sudo systemctl status gpdb.service
 ```
 
-### 테스트 시나리오
+## 2. 테스트 시나리오
 대시보드 조회를 위한 사용자 그룹(dashboard_users)과 데이터 로딩을 위한 ETL 그룹(etl_users)을 나누어 리소스를 할당하는 예시입니다.
 
 0단계: postgresql.conf 설정.
 
-## 마스트 노드에서 gpadmin 계정으로 작업.
+### 마스트 노드에서 gpadmin 계정으로 작업.
 
 ```
 gpconfig -c gp_resource_manager -v "group-v2"
