--- a/07.TPC-DS.md
+++ b/07.TPC-DS.md
@@ -1,38 +1,63 @@
 ## TPCDS for warehousePG
 
-at Master
+마스트 노드에서
 
 $ su - gpadmin
-$ git clone https://github.com/gpdbkr/gpmixedworkload.git
 
-$ pip install psycopg2-binary
+TPC-DS Git Repo 크론
+```
+git clone https://github.com/gpdbkr/gpmixedworkload.git
+```
+
+파이션 postgresq driver 설치
+```
+pip install psycopg2-binary
+```
+
+pg_hba.conf 설정
 
 $ vi  /data/master/gpseg-1/pg_hba.conf 
+```
 local all all trust
 host all all 0.0.0.0/0 trust
+```
 
-$ vi /home/gpadmin/.bashrc
+모든 세그먼트 노드 작업. 
+/home/gpadmin/.bashrc 에 아래 추가
+```
+source /usr/local/greenplum-db/greenplum_path.sh
+```
 
-at SDW1
-$ vi /home/gpadmin/.bashrc
-source /usr/local/greenplum-db/greenplum_path.sh 
-$ scp .bashrc sdw2:/home/gpadmin/.bashrc
+아래와 같이 복사해도 됨.
+```
+scp .bashrc sdw2:/home/gpadmin/.bashrc
+```
 
-at Master
+마스트 노드에서 TPC-DS 수행 준비 1.
+```
+cd gpmixedworkload
+cd shell
+sh gpconfigs.sh
+```
 
-$ cd gpmixedworkload
-$ cd shell
-$ sh gpconfigs.sh
+마스트 노드에서 TPC-DS 수행 준비 2
+```
+./poc_init.sh 
+```
 
-$ ./poc_init.sh 
-
-에러 발생. 
+아래 에러 발생시 search_path 에 tpcds 추가. 
 ERROR:  relation "store_returns" does not exist
-
+```
 ALTER ROLE dsbench SET search_path = "$user", public, tpcds, ext_tpcds;
 ALTER ROLE gpadmin SET search_path = "$user", public, gp_toolkit, tpcds;
+```
 
-$ nohup ./poc_run_all.sh & 
-
-$ cd /home/gpadmin/gpmixedworkload/TPC-DS
-$ nohup ./tpcds.sh > tpcds.log 2>&1 < tpcds.log &
+마스트 노드에서 TPC-DS 수행
+```
+nohup ./poc_run_all.sh & 
+```
+혹은
+```
+cd /home/gpadmin/gpmixedworkload/TPC-DS
+nohup ./tpcds.sh > tpcds.log 2>&1 < tpcds.log &
+```
