--- a/07-2.TPC-C.md
+++ b/07-2.TPC-C.md
@@ -3,35 +3,44 @@ TPC-C for WarehousePG
 $ sudo su - gpadmin
 
 1. pg_hba.conf 접속 가능하도록 수정 
-$ vi pg_hba.conf 
+$ vi pg_hba.conf
+```
 # "local" is for Unix domain socket connections only
 local   all             all                                     md5
 # IPv4 local connections:
 host    all             all             127.0.0.1/32            md5
 host    all             all             0.0.0.0/0            md5
+```
 
 2. (옵션) postgresql.conf 필요한 부분 수정.
 
 3. java 와 maven 설치.
-$ sudo dnf install git java-21-openjdk-devel maven 
+```
+sudo dnf install git java-21-openjdk-devel maven 
+```
 
 4. Database 와 사용자 생성.
 $ psql -d postgres
+```
 CREATE USER benchmarksql WITH ENCRYPTED PASSWORD 'changeme';
 CREATE DATABASE benchmarksql OWNER benchmarksql;
 \q
+```
 
 5.(옵션) 환경 설정
+```
 export PGPORT=5432
 export PGDATABASE=benchmarksql
 export PGUSER=benchmarksql
 export PGPASSWORD=changeme
 export PGHOST=whpg-m
+```
 
 6. 테스트 툴 다운로드 및 빌드
-$ git clone https://github.com/pgsql-io/benchmarksql.git
-
-$ git cline https://github.com/petergeoghegan/benchmarksql
+```
+#git clone https://github.com/pgsql-io/benchmarksql.git
+git cline https://github.com/petergeoghegan/benchmarksql
+```
 
 $ cd benchmarksql
 $ mvn
@@ -43,6 +52,7 @@ $ cd target/run
 $ cp sample.postgresql.properties whpg.properties
 
 $ vi whpg.properties
+```
 db=postgres
 driver=org.postgresql.Driver
 application=Generic
@@ -72,27 +82,11 @@ terminalMultiplier=2
 traceTerminalIO=false
 runMins=10
 runTxnsPerTerminal=0
-
-====
-
-conn=jdbc:postgresql://whpg-m:5432/benchmarksql
-user=benchmarksql
-password=changeme
-
-# Scaling and timing configuration
-#warehouses=50
-warehouses=10
-useWarehouseFrom=-1
-useWarehouseTo=-1
-#loadWorkers=8
-loadWorkers=2
-monkeys=2
-#sutThreads=16
-sutThreads=8
+```
 
 8. Greenplum(WarehousePG) 에 맞게 table 생성 SQL 수정.
-   vi target/run/sql.common/tableCreates.sql
 
+vi target/run/sql.common/tableCreates.sql
    DISTRIBUTED BY 구문 추가.
 ```
 #TPC-C Table for WarehousePG
@@ -232,18 +226,26 @@ DISTRIBUTED BY (s_w_id,s_i_id);
 ```
 
 9. 테스트 수행을 위한 schema 생성 및 데이터 적제
-$ ./runDatabaseBuild.sh whpg.properties
+```
+./runDatabaseBuild.sh whpg.properties
+```
 
 10. 테스트 수행
-$ ./runBenchmark.sh whpg.properties
+```
+./runBenchmark.sh whpg.properties
+```
 
 11. 테스트 수행 schema 및 데이터 삭제
-$ ./runDatabaseDestroy.sh whpg.properties
+```
+./runDatabaseDestroy.sh whpg.properties
+```
 
-12. 결과 리포트
+13. 결과 리포트
+```
 generateReport.py
+```
 
-13. 초기 데이터 적재시 아래와 같은 에러가 발생하면
+14. 초기 데이터 적재시 아래와 같은 에러가 발생하면
     Detail: System memory limit reached, failed to allocate 8388616 bytes from system
      Call getNextException to see other errors in the batch.
 
