Fix git clone command in TPC-C documentation
Corrected the clone command for the benchmarksql repository.

--- a/07-2.TPC-C.md
+++ b/07-2.TPC-C.md
@@ -40,11 +40,9 @@ export PGHOST=whpg-m
 ```
 #git clone https://github.com/pgsql-io/benchmarksql.git
 git cline https://github.com/petergeoghegan/benchmarksql
+cd benchmarksql
+mvn
 ```
-
-$ cd benchmarksql
-$ mvn
-
 7. 테스트 수행 준비. 
    properties 파일을 환경에 맞게 수정.
 
