Update formatting and links in 06.PXF.md

--- a/06.PXF.md
+++ b/06.PXF.md
@@ -61,19 +61,19 @@ $PXF_HOME/bin/pxf cluster sync   ; 설정 화일 모든 노드로 동기화.
 $PXF_HOME/bin/pxf cluster init
 ```
 
-5. S3 연동
+5. S3 연동 <br>
  참고 : https://gpdbkr.blogspot.com/search/label/GPDB6_PXF_S3연동  <br>
-5-1. csv 연동
+5-1. csv 연동 <br>
 
 
-5-2. Parquet 연동
+5-2. Parquet 연동 <br>
 
    
-6. DB 연동
-6-1. EPAS 연동
+6. DB 연동 <br>
+6-1. EPAS 연동 <br>
 
 
-6-2. Oracle 연동
+6-2. Oracle 연동 <br>
  참고 : https://gpdbkr.blogspot.com/search/label/GPDB6-PXF-DB연동  <br>
 
 
