Update headings in 06.PXF.md for better structure

--- a/06.PXF.md
+++ b/06.PXF.md
@@ -3,7 +3,7 @@
 https://gpdbkr.blogspot.com/search/label/GPDB6_PXF_S3연동 <br>
 https://gpdbkr.blogspot.com/search/label/GPDB6-PXF-DB연동 <br>
 
-1. Java 설치 ( 모든 노드 )
+### 1. Java 설치 ( 모든 노드 )
 ```
 sudo java -version
 sudo yum install java-17-openjdk
@@ -14,7 +14,7 @@ export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-17.0.15.0.6-2.el9.aarch64
 # ln -s /usr/lib/jvm/java-17-openjdk-17.0.15.0.6-2.el9.aarch64/bin/java /etc/alternatives/java
 ```
 
-2. PXF 설치 ( 모든 노드 )
+### 2. PXF 설치 ( 모든 노드 )
 2-1. pxf 설치 & 권한 설정
 ```
 sudo dnf install edb-whpg7-pxf-6.10.1-1.el9.x86_64.rpm 
@@ -45,7 +45,7 @@ export COORDINATOR_DATA_DIRECTORY=/data/coordinator/gpseg-1
 export PGPORT=5432
 ```
 
-3. PXF 명령어 
+### 3. PXF 명령어 
 ```
 $PXF_HOME/bin/pxf --help
 
@@ -56,24 +56,24 @@ $PXF_HOME/bin/pxf [cluster] stop
 $PXF_HOME/bin/pxf cluster sync   ; 설정 화일 모든 노드로 동기화.
 ```
 
-4. PXF cluster 초기화
+### 4. PXF cluster 초기화
 ```
 $PXF_HOME/bin/pxf cluster init
 ```
 
-5. S3 연동 <br>
+### 5. S3 연동 <br> 
  참고 : https://gpdbkr.blogspot.com/search/label/GPDB6_PXF_S3연동  <br>
-5-1. csv 연동 <br>
-
-
-5-2. Parquet 연동 <br>
+ 
+5-1. csv 연동
+ 
+5-2. Parquet 연동 
 
    
-6. DB 연동 <br>
-6-1. EPAS 연동 <br>
+### 6. DB 연동 <br>
+   
+6-1. EPAS 연동 
 
-
-6-2. Oracle 연동 <br>
+6-2. Oracle 연동
  참고 : https://gpdbkr.blogspot.com/search/label/GPDB6-PXF-DB연동  <br>
 
 
