Improve formatting of YAML file section in documentation
Updated YAML file section with HTML line breaks for better formatting.

--- a/05.데이터적재gpload.md
+++ b/05.데이터적재gpload.md
@@ -64,21 +64,21 @@ GPLOAD:
      - TABLE: public.users
      - MODE: insert # 데이터를 추가하는 모드
 ```
-YAML 파일 주요 항목 설명:
-DATABASE, USER, HOST, PORT: Greenplum 접속 정보
+YAML 파일 주요 항목 설명:<br>
+>DATABASE, USER, HOST, PORT: Greenplum 접속 정보
 
-INPUT:
-FILE: 로딩할 데이터 파일의 절대 경로를 지정합니다.
-COLUMNS: 데이터 파일의 각 열이 테이블의 어떤 컬럼과 타입에 매핑되는지 정의합니다.
-FORMAT: 데이터 파일의 형식 (csv 또는 text).
-DELIMITER: 구분자 (CSV의 경우 ,).
+INPUT:<br>
+>FILE: 로딩할 데이터 파일의 절대 경로를 지정합니다.<br>
+>COLUMNS: 데이터 파일의 각 열이 테이블의 어떤 컬럼과 타입에 매핑되는지 정의합니다.<br>
+>FORMAT: 데이터 파일의 형식 (csv 또는 text).<br>
+>DELIMITER: 구분자 (CSV의 경우 ,).<br>
 
-OUTPUT:
-TABLE: 데이터가 적재될 테이블 이름 (스키마명.테이블명).
-MODE: 데이터 적재 방식.
-insert: 데이터를 추가합니다.
-update: 기존 데이터를 업데이트합니다. (MATCH_COLUMNS, UPDATE_COLUMNS 필요)
-merge: 데이터가 있으면 업데이트, 없으면 추가합니다. (MATCH_COLUMNS, UPDATE_COLUMNS 필요)
+OUTPUT:<br>
+>TABLE: 데이터가 적재될 테이블 이름 (스키마명.테이블명).<br>
+>MODE: 데이터 적재 방식.<br>
+>insert: 데이터를 추가합니다.<br>
+>update: 기존 데이터를 업데이트합니다. (MATCH_COLUMNS, UPDATE_COLUMNS 필요)<br>
+>merge: 데이터가 있으면 업데이트, 없으면 추가합니다. (MATCH_COLUMNS, UPDATE_COLUMNS 필요)<br>
 
 ### 3단계: gpload 실행
 이제 터미널에서 gpload 명령어를 -f 옵션과 함께 실행하여 로딩 작업을 시작합니다.
@@ -87,4 +87,5 @@ Bash
 ```
 gpload -f load_users.yml
 ```
-명령어를 실행하면 gpload가 제어 파일의 내용을 읽어 병렬 데이터 로딩을 수행합니다. 작업이 완료되면 로딩된 행 수와 처리 속도 등의 요약 정보가 출력됩니다.
+명령어를 실행하면 gpload가 제어 파일의 내용을 읽어 병렬 데이터 로딩을 수행합니다. <br>
+작업이 완료되면 로딩된 행 수와 처리 속도 등의 요약 정보가 출력됩니다.
