--- a/06.PXF.md
+++ b/06.PXF.md
@@ -78,7 +78,63 @@ $PXF_HOME/bin/pxf cluster init
 
 
 
-   
+### 참고
+
+```
+drop table rtitrans_etl4;
+
+CREATE TABLE rtitrans (
+    imsi character varying(82),
+    subscriber_mccmnc character varying(10),
+    msisdn character varying(82),
+    imei character varying(50),
+    called_digits character varying(50),
+    start_datetime integer,
+    end_datetime integer,
+    first_cell_lac integer,
+    first_cell_idsac integer,
+    current_cell_lac integer,
+    current_cell_idsac integer,
+    dr_type integer,
+    status character varying(50),
+    ingest_time bigint,
+    processed_time bigint,
+    export_time bigint,
+    extra_col text,
+    gploaded_time timestamp without time zone
+)
+WITH (appendonly=true) DISTRIBUTED BY (imsi);
+```
+
+=== pxf minoi parquet =====
+```
+CREATE EXTERNAL TABLE minio_parquet_cusomer (
+    -- MinIO Parquet 파일의 실제 스키마에 맞게 컬럼 정의
+    -- 데이터 타입은 Parquet의 논리적 타입과 PostgreSQL 타입 매핑 고려
+    c_customer_sk             INTEGER   ,
+    c_customer_id             CHAR(16)  ,
+    c_current_cdemo_sk        INTEGER                       ,
+    c_current_hdemo_sk        INTEGER                       ,
+    c_current_addr_sk         INTEGER                       ,
+    c_first_shipto_date_sk    INTEGER                       ,
+    c_first_sales_date_sk     INTEGER                       ,
+    c_salutation              CHAR(10)                      ,
+    c_first_name              CHAR(20)                      ,
+    c_last_name               CHAR(30)                      ,
+    c_preferred_cust_flag     CHAR(1)                       ,
+    c_birth_day               INTEGER                       ,
+    c_birth_month             INTEGER                       ,
+    c_birth_year              INTEGER                       ,
+    c_birth_country           VARCHAR(20)                   ,
+    c_login                   CHAR(13)                      ,
+    c_email_address           CHAR(50)                      ,
+    c_last_review_date        CHAR(10)                      
+)
+--LOCATION ('pxf://192.168.56.51/pgaa/tpch_sf_1/customer/?PROFILE=s3&SERVER=s3')
+LOCATION ('pxf://192.168.56.51/pgaa/tpch_sf_1/customer/?PROFILE=s3:parquet')
+--ON ANY SEGMENT
+FORMAT 'CUSTOM' (FORMATTER='pxfwritable_import');
+```
 
 
 
