Enhance External Table documentation for CSV usage
Updated the documentation for creating External Tables in Greenplum using CSV files, including examples and explanations of key options.

--- a/04.External Table.md
+++ b/04.External Table.md
@@ -1,55 +1,93 @@
 
 ![External Table Architecture](png/externaltable_architecture.png)
 
-drop table rtitrans_etl4;
+Greenplum에서 CSV 파일을 사용하여 **External Table**을 생성하는 것은 외부 시스템(예: 파일 서버, MinIO/S3)에 저장된 데이터를 Greenplum의 세그먼트 노드들이 병렬로 읽어 들여 마치 내부 테이블처럼 쿼리할 수 있게 하는 매우 강력하고 효율적인 ETL 방식입니다.
 
-CREATE TABLE rtitrans (
-    imsi character varying(82),
-    subscriber_mccmnc character varying(10),
-    msisdn character varying(82),
-    imei character varying(50),
-    called_digits character varying(50),
-    start_datetime integer,
-    end_datetime integer,
-    first_cell_lac integer,
-    first_cell_idsac integer,
-    current_cell_lac integer,
-    current_cell_idsac integer,
-    dr_type integer,
-    status character varying(50),
-    ingest_time bigint,
-    processed_time bigint,
-    export_time bigint,
-    extra_col text,
-    gploaded_time timestamp without time zone
+여기에 기본적인 CSV 외부 테이블 생성 예시를 제시하고, 성능을 위한 옵션을 설명해 드립니다.
+
+-----
+
+## 1\. 📂 CSV External Table 생성 예시
+
+다음은 기본적인 CSV 파일을 위한 외부 테이블 생성 구문입니다.
+
+### 1.1. 데이터 파일 준비 (예시: `sales_data.csv`)
+
+외부 서버의 디렉터리(`/home/gpadmin/ext_data/`)에 다음과 같은 CSV 파일이 있다고 가정합니다.
+
+```csv
+sale_id,customer_id,product_name,sale_date,amount
+1001,C001,Laptop,2025-10-01,1200.50
+1002,C002,Monitor,2025-10-01,350.00
+1003,C001,Keyboard,2025-10-02,75.99
+```
+
+### 1.2. SQL 구문
+
+```sql
+CREATE EXTERNAL TABLE ext_sales (
+    sale_id INT,
+    customer_id TEXT,
+    product_name TEXT,
+    sale_date DATE,
+    amount NUMERIC(10, 2)
 )
-WITH (appendonly=true) DISTRIBUTED BY (imsi);
+LOCATION ('gpfdist://<hostname_or_ip>:8081/sales_data.csv')  -- (A) gpfdist 경로
+FORMAT 'CSV'                                                  -- (B) 파일 형식 지정
+(HEADER, DELIMITER ',' )                                      -- (C) CSV 세부 옵션
+ENCODING 'UTF8'                                               -- (D) 인코딩 설정
+LOG ERRORS SEGMENT REJECT LIMIT 5 PERCENT;                    -- (E) 오류 처리
+```
 
-=== pxf minoi parquet =====
+-----
 
-CREATE EXTERNAL TABLE minio_parquet_cusomer (
-    -- MinIO Parquet 파일의 실제 스키마에 맞게 컬럼 정의
-    -- 데이터 타입은 Parquet의 논리적 타입과 PostgreSQL 타입 매핑 고려
-    c_customer_sk             INTEGER   ,
-    c_customer_id             CHAR(16)  ,
-    c_current_cdemo_sk        INTEGER                       ,
-    c_current_hdemo_sk        INTEGER                       ,
-    c_current_addr_sk         INTEGER                       ,
-    c_first_shipto_date_sk    INTEGER                       ,
-    c_first_sales_date_sk     INTEGER                       ,
-    c_salutation              CHAR(10)                      ,
-    c_first_name              CHAR(20)                      ,
-    c_last_name               CHAR(30)                      ,
-    c_preferred_cust_flag     CHAR(1)                       ,
-    c_birth_day               INTEGER                       ,
-    c_birth_month             INTEGER                       ,
-    c_birth_year              INTEGER                       ,
-    c_birth_country           VARCHAR(20)                   ,
-    c_login                   CHAR(13)                      ,
-    c_email_address           CHAR(50)                      ,
-    c_last_review_date        CHAR(10)                      
-)
---LOCATION ('pxf://192.168.56.51/pgaa/tpch_sf_1/customer/?PROFILE=s3&SERVER=s3')
-LOCATION ('pxf://192.168.56.51/pgaa/tpch_sf_1/customer/?PROFILE=s3:parquet')
---ON ANY SEGMENT
-FORMAT 'CUSTOM' (FORMATTER='pxfwritable_import');
+## 2\. 📝 구문별 주요 옵션 설명
+
+### (A) `LOCATION` - 데이터 경로와 프로토콜
+
+`LOCATION` 절은 외부 데이터 파일의 위치와 접근 방식을 정의합니다.
+
+  * **`gpfdist://<hostname_or_ip>:8081/sales_data.csv`**
+      * **`gpfdist`**: Greenplum에서 **고속 병렬 데이터 로딩**을 위해 사용하는 프로토콜입니다.
+      * **`<hostname_or_ip>:8081`**: 파일을 제공하는 **Gpfdist 서버**가 실행 중인 호스트 주소와 포트 번호입니다. **여러 Gpfdist 인스턴스**를 쉼표로 구분하여 나열할 수 있으며, 이는 병렬 로딩 성능을 극대화합니다.
+      * **`/sales_data.csv`**: Gpfdist 서버가 바라보는 디렉터리 내의 파일 이름입니다. (와일드카드 `*` 사용 가능)
+
+> 💡 **Gpfdist 실행:** 외부 테이블을 쿼리하기 전에, 해당 파일이 있는 서버에서 `gpfdist -p 8081 -d /home/gpadmin/ext_data` 와 같이 Gpfdist 서버를 실행해야 합니다.
+
+### (B) `FORMAT` - 파일 형식
+
+  * **`FORMAT 'CSV'`**: 외부 파일의 형식이 CSV임을 명시합니다.
+
+### (C) CSV 세부 옵션
+
+CSV 파일의 구조를 정의합니다.
+
+  * **`HEADER`**: CSV 파일의 첫 번째 줄이 헤더(컬럼 이름)이며 데이터로 취급하지 않음을 지정합니다.
+  * **`DELIMITER ','`**: 필드 구분자가 쉼표(Comma)임을 지정합니다. (`|`, `\t` 등도 가능)
+  * **`NULL ''`**: 파일에서 빈 문자열(`''`)을 데이터베이스의 `NULL` 값으로 처리하도록 지정합니다.
+
+### (D) `ENCODING` - 인코딩 설정
+
+  * **`ENCODING 'UTF8'`**: 파일의 문자 인코딩을 지정합니다. 데이터 파일의 실제 인코딩과 일치해야 합니다. (한국어 환경에서는 보통 `UTF8`을 사용합니다.)
+
+### (E) `LOG ERRORS` - 오류 처리 (Reject Limit)
+
+대용량 로딩 시 데이터 오류로 인해 전체 로딩 작업이 실패하는 것을 방지합니다.
+
+  * **`LOG ERRORS`**: 오류가 발생한 행을 별도의 시스템 테이블에 기록합니다.
+  * **`SEGMENT REJECT LIMIT 5 PERCENT`**: 한 세그먼트에서 **5% 이하**의 오류가 발생하면, 오류 행을 건너뛰고 나머지 정상적인 행을 처리하도록 허용합니다. (숫자 또는 퍼센트(%)로 설정 가능)
+
+-----
+
+## 3\. 🎯 외부 테이블 사용 (SELECT)
+
+외부 테이블을 생성한 후에는 일반적인 Greenplum 테이블처럼 `SELECT` 쿼리를 사용하여 데이터를 조회할 수 있습니다.
+
+```sql
+-- 외부 테이블에서 데이터 조회
+SELECT * FROM ext_sales WHERE amount > 500.00;
+
+-- 내부 테이블로 데이터 로딩 (가장 일반적인 사용 사례)
+INSERT INTO internal_sales (col1, col2, ...)
+SELECT * FROM ext_sales;
+```
