--- a/04.External Table.md
+++ b/04.External Table.md
@@ -22,7 +22,44 @@ sale_id,customer_id,product_name,sale_date,amount
 1003,C001,Keyboard,2025-10-02,75.99
 ```
 
-### 1.2. SQL 구문
+### 1.2. ⚙️ Gpfdist 서버 실행
+
+`gpfdist`는 Greenplum 세그먼트 노드들이 외부 데이터 파일에 병렬로 접근할 수 있도록 HTTP 서버 역할을 수행합니다.
+
+#### 1.2.1. 파일 준비
+
+Greenplum 클러스터의 모든 세그먼트 노드가 접근 가능한 서버(예: 마스터 노드, 파일 서버, 또는 별도의 ETL 서버)에 데이터 파일을 위치시킵니다.
+
+  * **경로 예시:** `/home/gpadmin/ext_data/`
+  * **파일 예시:** `sales_data_2025.csv`
+
+#### 1.2.2. Gpfdist 명령어 실행
+
+Gpfdist 서버는 파일을 제공할 디렉터리와 리스닝할 포트를 지정하여 실행합니다. 이는 **모든 세그먼트 노드가 파일을 읽을 수 있도록** 외부 테이블 쿼리 전에 실행되어야 합니다.
+
+```bash
+# gpadmin 사용자로 실행
+gpfdist -p <port> -d <data_directory> 
+
+# 예시: 8081 포트, /home/gpadmin/ext_data/ 디렉터리 사용
+gpfdist -p 8081 -d /home/gpadmin/ext_data/ & 
+```
+
+| 옵션 | 설명 |
+| :--- | :--- |
+| **`-p <port>`** | Gpfdist 서버가 리스닝할 포트 번호입니다. |
+| **`-d <data_directory>`** | CSV 파일이 위치한 로컬 디렉터리 경로입니다. |
+| **`&`** | 백그라운드에서 실행하여 터미널을 계속 사용할 수 있게 합니다. |
+
+> 💡 **팁:** 대용량 로딩 시 병렬 처리량을 높이기 위해 **여러 개의 Gpfdist 인스턴스**를 다른 포트에서 실행할 수 있습니다.
+
+### 1.3. 방화벽 확인
+
+Gpfdist 서버가 실행되는 호스트의 방화벽(예: `firewalld` 또는 `iptables`)에서 지정된 포트(`8081` 등)가 **Greenplum 세그먼트 호스트들로부터의 접근**을 허용하는지 확인해야 합니다.
+
+=======
+
+### 1.4. SQL 구문
 
 ```sql
 CREATE EXTERNAL TABLE ext_sales (
