Improve formatting in firewall access instructions
Add line break for better readability in firewall section.

--- a/04.External Table.md
+++ b/04.External Table.md
@@ -55,7 +55,8 @@ gpfdist -p 8081 -d /home/gpadmin/ext_data/ &
 
 ### 1.3. 방화벽 확인
 
-Gpfdist 서버가 실행되는 호스트의 방화벽(예: `firewalld` 또는 `iptables`)에서 지정된 포트(`8081` 등)가 **Greenplum 세그먼트 호스트들로부터의 접근**을 허용하는지 확인해야 합니다.
+Gpfdist 서버가 실행되는 호스트의 방화벽(예: `firewalld` 또는 `iptables`)에서 지정된 포트(`8081` 등)가 <br>
+**Greenplum 세그먼트 호스트들로부터의 접근**을 허용하는지 확인해야 합니다.
 
 =======
 
