Update and rename 15.MADLib 예시 to 15.MADLib 구성 및 예시.md

--- a/15.MADLib 구성 및 예시.md
+++ b/15.MADLib 구성 및 예시.md
@@ -1,4 +1,15 @@
+======= MADLib 구성 =======
+1. 모든 노드에 rpm 설치. 
+sudp dnf install edb-whpg7-madlib-2.1.0-1.el9.x86_64.rpm
 
+설치 폴더 : /usr/local/madlib/
+
+2. madpack 실행.madpack utility
+$ madpack -s madlib -p greenplum -c gpadmin@mdw:5432/testdb install
+>testdb is the database
+>madpack is inside /usr/local/madlib/bin/madpack
+
+============================
 1. 선형 회귀 모델 학습 및 예측 (madlib.linregr)
 
 1-1. 예제 테이블 생성
