Update 15.MADLib 구성 및 예시.md

--- a/15.MADLib 구성 및 예시.md
+++ b/15.MADLib 구성 및 예시.md
@@ -1,13 +1,22 @@
 ======= MADLib 구성 =======
+참고 <br>
+https://madlib.apache.org/docs/latest/index.html <br>
+https://madlib.apache.org/docs/latest/group__grp__clustered__errors.html <br>
+
 1. 모든 노드에 rpm 설치. 
 sudp dnf install edb-whpg7-madlib-2.1.0-1.el9.x86_64.rpm
 
-설치 폴더 : /usr/local/madlib/
+>설치 폴더 : /usr/local/madlib/
 
 2. madpack 실행.madpack utility
-$ madpack -s madlib -p greenplum -c gpadmin@mdw:5432/testdb install
->testdb is the database
+$ madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install
+>whpg is the database <br>
 >madpack is inside /usr/local/madlib/bin/madpack
+
+3. madpack 설치 확인.
+create extension plpyton3u;
+create extension plpytonu;
+$ madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install-check
 
 ============================
 1. 선형 회귀 모델 학습 및 예측 (madlib.linregr)
