Update 15.MADLib 구성 및 예시.md

--- a/15.MADLib 구성 및 예시.md
+++ b/15.MADLib 구성 및 예시.md
@@ -1,9 +1,9 @@
-======= MADLib 구성 =======
+======= MADLib 구성 ======= <br>
 참고 <br>
 https://madlib.apache.org/docs/latest/index.html <br>
 https://madlib.apache.org/docs/latest/group__grp__clustered__errors.html <br>
 
-1. 모든 노드에 rpm 설치. 
+1. 모든 노드에 rpm 설치. <br>
 sudp dnf install edb-whpg7-madlib-2.1.0-1.el9.x86_64.rpm
 
 >설치 폴더 : /usr/local/madlib/
