--- a/15.MADLib 구성 및 예시.md
+++ b/15.MADLib 구성 및 예시.md
@@ -8,58 +8,69 @@ sudp dnf install edb-whpg7-madlib-2.1.0-1.el9.x86_64.rpm
 
 >설치 폴더 : /usr/local/madlib/
 
-2. madpack 실행.madpack utility
+2. madpack 실행.madpack utility <br>
 $ madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install
 >whpg is the database <br>
 >madpack is inside /usr/local/madlib/bin/madpack
 
-3. madpack 설치 확인.
-create extension plpyton3u;
-create extension plpytonu;
+3. madpack 설치 확인. <br>
+$ psql -d whpg<br>
+create extension plpython3u; <br>
+exit <br>
+
 $ madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install-check
 
 ============================
-1. 선형 회귀 모델 학습 및 예측 (madlib.linregr)
+1. 선형 회귀 모델 학습 및 예측 (madlib.linregr) <br>
 
-1-1. 예제 테이블 생성
+1-1. 예제 테이블 생성 <br>
+```
                CREATE TABLE regr_example (
                   id INT,
                   y INT,
                   x1 INT,
                   x2 INT
                );
+```
 
 1-2. 데이터 삽입
+```
                INSERT INTO regr_example VALUES 
                   (1, 5, 2, 3),
                   (2, 10, 7, 2),
                   (3, 6, 4, 1),
                   (4, 8, 3, 4);
+```
 
-1-3. 모델 생성 (madlib.linregr_train)
-선형 회귀 모델 함수를 사용해 regr_example_model 테이블에 회귀 모델을 생성합니다.
+1-3. 모델 생성 (madlib.linregr_train) <br>
+선형 회귀 모델 함수를 사용해 regr_example_model 테이블에 회귀 모델을 생성합니다. <br>
+```
                SELECT madlib.linregr_train (
                   'regr_example',         -- 학습 데이터 테이블
                   'regr_example_model',   -- 출력(모델) 테이블
                   'y',                    -- 종속변수
                   'ARRAY[1, x1, x2]'      -- 독립변수 (1은 절편항)
                );
-
+```
 1. 선형 회귀 모델 학습 및 예측 (madlib.linregr)
 
 1-4 모델 결과 확인
+```
                SELECT * FROM regr_example_model;
+```
 
-1-5 예측 및 잔차(residual) 계산
-선형 회귀 모델 함수를 이용해 실제값(y)과 예측값(predict)의 차이를 확인합니다.
-               SELECT regr_example.*, 
-        madlib.linregr_predict ( ARRAY[1, x1, x2], m.coef ) as predict,
-        y - madlib.linregr_predict ( ARRAY[1, x1, x2], m.coef ) as residual
+1-5 예측 및 잔차(residual) 계산 <br>
+선형 회귀 모델 함수를 이용해 실제값(y)과 예측값(predict)의 차이를 확인합니다. <br>
+```
+SELECT regr_example.*, 
+      madlib.linregr_predict ( ARRAY[1, x1, x2], m.coef ) as predict,
+      y - madlib.linregr_predict ( ARRAY[1, x1, x2], m.coef ) as residual
 FROM regr_example, regr_example_model m;
+```
+2. 연관 규칙 분석 (madlib.assoc_rules) <br>
 
-2. 연관 규칙 분석 (madlib.assoc_rules)
-
-2-1. 테스트 테이블 생성 및 데이터 삽입
+2-1. 테스트 테이블 생성 및 데이터 삽입 <br>
+```
                CREATE TABLE test_data (
                   trans_id INT,
                   product TEXT
@@ -81,8 +92,9 @@ FROM regr_example, regr_example_model m;
                   (6, 'chips'),
                   (7, 'beer'),
                   (7, 'diapers');
-
+```
 2-2 연관 규칙 분석 함수 실행
+```
                SELECT * FROM madlib.assoc_rules (
                   0.40,          -- 최소 지지도 (support)
                   0.75,          -- 최소 신뢰도 (confidence)
@@ -92,19 +104,21 @@ FROM regr_example, regr_example_model m;
                   'public',      -- 출력 스키마
                   false          -- 처리 상세 로그 표시 여부
                );
-
+```
 2. 연관 규칙 분석 (madlib.assoc_rules)
 
 2-3. 연관 규칙 확인
+```
 SELECT pre, post, support
 FROM assoc_rules
 ORDER BY support DESC;
+```
 
+3. 나이브 베이즈 분류 (Naive Bayes) 예제 1 — 단순 숫자형 속성 <br>
 
-3. 나이브 베이즈 분류 (Naive Bayes) 예제 1 — 단순 숫자형 속성
-
-3-1. 테이블 생성 및 데이터 삽입
-실제 환경에서는 더 많은 학습 데이터가 있을수록 모델 정확도가 향상됩니다.
+3-1. 테이블 생성 및 데이터 삽입 <br>
+실제 환경에서는 더 많은 학습 데이터가 있을수록 모델 정확도가 향상됩니다. <br>
+```
                CREATE TABLE class_example (
                   id int, class int, attributes int[]);
                INSERT INTO class_example VALUES
@@ -114,9 +128,10 @@ ORDER BY support DESC;
                   (4, 1, '{1, 2, 1}'),
                   (5, 2, '{1, 2, 2}'),
                   (6, 2, '{0, 1, 3}');
-
+```
 
 3-2. 모델 학습 (madlib.create_nb_prepared_data_tables)
+```
                SELECT * FROM madlib.create_nb_prepared_data_tables (
                   'class_example',               -- 학습 테이블
                   'class',                           -- 종속(클래스) 컬럼
@@ -125,9 +140,10 @@ ORDER BY support DESC;
                   'example_feature_probs',    -- 출력: 속성 확률 테이블
                   'example_priors'               -- 출력: 클래스 사전확률 테이블
                );
+```
 
-
-3-3. 분류 대상 데이터 생성
+3-3. 분류 대상 데이터 생성 
+```
                CREATE TABLE class_example_topredict (
                   id INT,
                   attributes INT[]
@@ -137,9 +153,11 @@ ORDER BY support DESC;
                   (1, '{1, 3, 2}'),
                   (2, '{4, 2, 2}'),
                   (3, '{2, 1, 1}');
+```
 
-3-4. 분류 결과 뷰 생성
-madlib.create_nb_probs_view() 함수로 예측 결과를 계산할 뷰를 생성합니다.
+3-4. 분류 결과 뷰 생성 <br>
+madlib.create_nb_probs_view() 함수로 예측 결과를 계산할 뷰를 생성합니다. <br>
+```
                SELECT madlib.create_nb_probs_view (
                   'example_feature_probs',    -- 속성 확률 테이블
                   'example_priors',              -- 클래스 사전확률 테이블
@@ -149,13 +167,17 @@ madlib.create_nb_probs_view() 함수로 예측 결과를 계산할 뷰를 생성
                   3,                                 -- 속성 개수
                   'example_classified'          -- 출력 뷰 이름
                );
+```
 
 3-5. 예측 결과 조회
-               SELECT * FROM example_classified;
+```
+ SELECT * FROM example_classified;
+```
 
-4. 나이브 베이즈 분류 (Naive Bayes) 예제 2 — 날씨 데이터
+4. 나이브 베이즈 분류 (Naive Bayes) 예제 2 — 날씨 데이터 <br>
 
-4-1 테이블 생성 및 데이터 삽입
+4-1 테이블 생성 및 데이터 삽입<br>
+```
                CREATE TABLE weather_example (
                   day int,
                   play int,
@@ -177,8 +199,10 @@ madlib.create_nb_probs_view() 함수로 예측 결과를 계산할 뷰를 생성
                   ( 9, 1, '{1,3,2,2}'),
                   (11, 1, '{1,2,2,1}'),
                   (13, 1, '{2,1,2,2}');
+```
 
 4-2. 모델 학습
+```
                SELECT madlib.create_nb_prepared_data_tables (
                   'weather_example',  -- 학습 테이블
                   'play',                  -- 종속(클래스) 컬럼
@@ -187,11 +211,15 @@ madlib.create_nb_probs_view() 함수로 예측 결과를 계산할 뷰를 생성
                   'weather_probs',    -- 속성 확률 출력 테이블
                   'weather_priors'     -- 클래스 사전확률 출력 테이블
                );
+```
 
 4-3. 속성 확률 테이블 조회
-               SELECT * FROM weather_probs;
+```
+ SELECT * FROM weather_probs;
+```
 
 4-4. 분류 대상 데이터 생성
+```
                CREATE TABLE t1 (
                   id integer,
                   attributes integer[]);
@@ -201,8 +229,10 @@ madlib.create_nb_probs_view() 함수로 예측 결과를 계산할 뷰를 생성
                   (2, '{3, 3, 2, 1}'),
                   (3, '{2, 1, 2, 2}'),
                   (4, '{3, 1, 1, 2}');
+```
 
 4-6. 분류 결과 생성
+```
                SELECT madlib.create_nb_classify_view (
                   'weather_probs',       -- 속성 확률 테이블
                   'weather_priors',       -- 클래스 사전확률 테이블
@@ -212,8 +242,9 @@ madlib.create_nb_probs_view() 함수로 예측 결과를 계산할 뷰를 생성
                   4,                         -- 속성 개수
                   't1_out'                  -- 출력 테이블 이름
                );
+```
 
 4-7. 주어진 날씨 조건을 분석하여 아이들이 나갈 수 있을 지 예측
+```
                SELECT * FROM t1_out ORDER BY key;
-
-
+```
