Update 15.MADLib 구성 및 예시.md

--- a/15.MADLib 구성 및 예시.md
+++ b/15.MADLib 구성 및 예시.md
@@ -14,12 +14,14 @@ $ madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install
 >madpack is inside /usr/local/madlib/bin/madpack
 
 3. madpack 설치 확인. <br>
-$ psql -d whpg<br>
-create extension plpython3u; <br>
-exit <br>
-
-$ madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install-check
-
+사전에 plpython3u 확장 기능 구성.
+```
+create extension plpython3u; 
+```
+madlib 설치
+```
+madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install-check
+```
 ============================
 1. 선형 회귀 모델 학습 및 예측 (madlib.linregr) <br>
 
