Update 15.MADLib 구성 및 예시.md

--- a/15.MADLib 구성 및 예시.md
+++ b/15.MADLib 구성 및 예시.md
@@ -9,16 +9,18 @@ sudp dnf install edb-whpg7-madlib-2.1.0-1.el9.x86_64.rpm
 >설치 폴더 : /usr/local/madlib/
 
 2. madpack 실행.madpack utility <br>
-$ madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install
->whpg is the database <br>
->madpack is inside /usr/local/madlib/bin/madpack
-
-3. madpack 설치 확인.<br>
 사전에 plpython3u 확장 기능 구성.
 ```
 create extension plpython3u; 
 ```
 madlib 설치
+```
+madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install
+```
+>whpg is the database <br>
+>madpack is inside /usr/local/madlib/bin/madpack
+
+3. madpack 설치 확인.<br>
 ```
 madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install-check
 ```
