--- a/04.External Table.md
+++ b/04.External Table.md
@@ -72,7 +72,7 @@ CREATE EXTERNAL TABLE ext_sales (
 )
 LOCATION ('gpfdist://<hostname_or_ip>:8081/sales_data.csv')  -- (A) gpfdist 경로
 FORMAT 'CSV'                                                  -- (B) 파일 형식 지정
-(HEADER, DELIMITER ',' )                                      -- (C) CSV 세부 옵션
+(HEADER ON, DELIMITER ',' )                                      -- (C) CSV 세부 옵션
 ENCODING 'UTF8'                                               -- (D) 인코딩 설정
 LOG ERRORS SEGMENT REJECT LIMIT 5 PERCENT;                    -- (E) 오류 처리
 ```
