Update 16.FlowServer 구성 예시.md

--- a/16.FlowServer 구성 예시.md
+++ b/16.FlowServer 구성 예시.md
@@ -1,3 +1,6 @@
+## FlowServer with Confluent and Debezium
+
+![External Table Architecture](png/flowserver.png)
 
 ### 0.Setup WarehousePG ( Target DB )
 install Flow Server RPM at all node of WarehousePG
