Update 15.MADLib 구성 및 예시.md

--- a/15.MADLib 구성 및 예시.md
+++ b/15.MADLib 구성 및 예시.md
@@ -9,11 +9,20 @@ sudp dnf install edb-whpg7-madlib-2.1.0-1.el9.x86_64.rpm
 >설치 폴더 : /usr/local/madlib/
 
 2. madpack 실행.madpack utility <br>
-사전에 plpython3u 확장 기능 구성.
+-- 사전에 plpython3u 확장 기능 구성.
 ```
 create extension plpython3u; 
 ```
-madlib 설치
+
+-- change to Python2 env at Master/Coordinator
+```
+sudo dnf install ./edb-python27-2.7.18-1.el9.x86_64.rpm
+alias python='/usr/bin/python2'
+pip install egg
+pip install PyYAML==3.13
+```
+
+-- madlib 설치
 ```
 madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install
 ```
@@ -23,6 +32,7 @@ madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install
 3. madpack 설치 확인.<br>
 ```
 madpack -s madlib -p greenplum -c gpadmin@whpg-c:5432/whpg install-check
+unalias python='/usr/bin/python2'
 ```
 ============================
 1. 선형 회귀 모델 학습 및 예측 (madlib.linregr) <br>
